Updating meta-data on style.css

--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+
+ /*
+Theme Name: Clean Blog Theme
+Theme URI: http://www.millolab.com;
+Author: Millolab Team
+Author URI: http://millolab.com
+Description: Minimal responsive theme based on startbootstrap theme with the same name
+Version: 1.0
+License: apache 2.0 
+
+This theme is licensed under apache 2.0.
+*/
 /*!
  * Clean Blog v1.0.0 (http://startbootstrap.com)
  * Copyright 2014 Start Bootstrap
